General bug squashing and UI fixes

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   font-size: larger;
   display: flex;
   flex-flow: column;
+  min-width: 15em;
 }
 
 .header {
@@ -20,6 +21,6 @@
 }
 
 .module-switch {
+  width: 100%;
   position: relative;
-  flex: 1;
 }
